--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@testing-library/user-event": "^12.8.3",
     "dotenv": "^10.0.0",
     "ethers": "^5.4.7",
+    "lottie-web": "^5.7.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loading": "^2.0.3",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
